--- a/css/exercises/styles.css
+++ b/css/exercises/styles.css
@@ -1,1 +1,28 @@
 /* Start adding your styling below! */ 
+body {
+    background-color: yellow;
+}
+
+p {
+    color: green;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+ol {
+    color: hotpink;
+}
+
+.center {
+    text-align: center;
+}
+
+#cool-text {
+    color: blue;
+}
+
+#list-color {
+    color: rgb(59, 0, 114);
+}
